# veriflow

./: .gitignore  README.md  pyproject.toml  requirements.txt  veriflow.yaml.example
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md
.planning/phases/02-data-verification/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md
.planning/phases/03-classic-ml-evaluation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md
.planning/phases/04-llm-rag-evaluation/: 04-01-PLAN.md  04-02-PLAN.md  04-03-PLAN.md  04-04-PLAN.md  04-05-PLAN.md  04-06-PLAN.md
tests/: test_cli.py
veriflow/: __init__.py  __main__.py  cli.py  config.py  init.py  schema.py
veriflow/data/: __init__.py  checks.py  drift.py  fingerprint.py  loader.py  overlap.py  schema.py
veriflow/evaluation/: __init__.py  bootstrap.py  comparison.py  deterministic.py  evaluator.py  metrics.py  results.py
